--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-appdirs==1.4.3
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.1.2
-Flask-Cors==3.0.8
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-MarkupSafe==1.1.1
-numpy==1.22.4
-pandas==1.3.0
-python-dateutil==2.8.1
-pytz==2019.3
-scikit-learn==0.22.1
-scipy==1.4.1
-six==1.14.0
-xgboost==1.1.1
-virtualenv==20.0.7
-Werkzeug==1.0.1
-wincertstore==0.2
+appdirs>=1.4.4
+certifi>=2023.7.22
+click>=8.1.7
+distlib>=0.3.7
+Flask>=2.3.3
+Flask-Cors>=4.0.0
+gunicorn>=20.1.0
+itsdangerous>=2.1.2
+Jinja2>=3.1.2
+joblib>=1.3.2
+MarkupSafe>=2.1.3
+numpy>=1.24.0
+pandas>=2.0.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+scikit-learn>=1.3.1
+scipy>=1.10.1
+six>=1.16.0
+xgboost>=1.7.6
+virtualenv>=20.24.0
+Werkzeug>=2.3.7
+wincertstore>=0.2
